Fixed 50% width
It was too small for phones

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body, html {
 	width: 100%;
 	height: 100%;
+	margin: 0px;
+	padding: 0px;
 }
 
 body {
@@ -31,7 +33,7 @@ a {
 #CanvasHolder{
 	/*border: 1px solid red;*/
 	position: relative;
-  width: 50%;
+  width: 100%;
   height: 70%;
   margin: 0 auto;
 }
